# app/Virtual/Resources/PostResource.php
@@ -1,0 +1,23 @@
+<?php
+
+namespace App\Virtual\Resources;
+
+/**
+ * @OA\Schema(
+ *  title="PostResource",
+ *  description="Post resource",
+ *  @OA\Xml(name="PostResource")
+ * )
+ */
+class PostResource
+{
+  /**
+   * @OA\Property(
+   *     title="data",
+   *     description="Data wrapper"
+   * )
+   *
+   * @var \App\Virtual\Models\Post[]
+   */
+  private $data;
+}
